force-app/main/default/objects/BI_Pricing__mdt/BI_Pricing__mdt.object-meta.xml
<CustomObject>
    <label>BI Pricing</label>
    <pluralLabel>BI Pricings</pluralLabel>
</CustomObject>