force-app/main/default/objects/BI_Pricing__mdt/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <label>Contact Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>