force-app/main/default/objects/BI_Pricing__mdt/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>