force-app/main/default/objects/BI_Pricing__mdt/fields/Unable_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Unable_to_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unable to Complete</label>
    <type>Checkbox</type>
</CustomField>